fix(mon-pix): remove the tag component overflow in the training card

--- a/mon-pix/app/styles/pages/_skill-review.scss
+++ b/mon-pix/app/styles/pages/_skill-review.scss
@@ -184,6 +184,7 @@
   &__item {
     width: 100%;
     padding: 0;
+    overflow: hidden;
     transition: all 0.2s ease-in-out;
 
     &:hover {
